@@ -6,6 +6,7 @@
 - Fix: Selection of best weapon on depleted ammo and player spawn.
 - Fix: Settings not correctly clamped.
 - Fix: Potential crash after changelevel.
+- Fix: Physcannon throwing errors when players die.
 
 0.9.5
 - Improved: Add projected textures as an option for physcannon glow, enabled by default (physcannon_glow = 1)
